--- a/mini_project_upn_zetta_team_L/src/app/home/home/home.component.html
+++ b/mini_project_upn_zetta_team_L/src/app/home/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+    <title> Home Page - Sushi Restaurant</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div class="header">
+        <h1>Sushi Resto</h1>
+    </div>
+	<div class="toolbar">
+		<mat-toolbar color="primary">
+			<mat-toolbar-row>
+			   <span><a href="home.component.html">HOME</a></span>
+			   <span class="spacer"></span>
+			   <a mat-button routerLink="/login">Login</a>
+			</mat-toolbar-row>
+		</mat-toolbar>
+	</div>
+</body>
+</html>
