--- a/mini_project_upn_zetta_team_L/src/app/login/login/login.component.scss
+++ b/mini_project_upn_zetta_team_L/src/app/login/login/login.component.scss
@@ -1,11 +1,11 @@
 .example-card {
-    width: 500px;
+    width: 600px;
     justify-content: center;
     align-items: center;
     
     margin-left: auto;
     margin-right: auto;
-
+background-color: aliceblue;
     
   }
 
