--- a/mini_project_upn_zetta_team_L/src/app/app.component.html
+++ b/mini_project_upn_zetta_team_L/src/app/app.component.html
@@ -1,2 +1,11 @@
 <!-- <h1>this is app component</h1> -->
+<nav mat-tab-nav-bar [tabPanel]="tabPanel">
+  <a mat-tab-link *ngFor="let link of links"
+     (click)="route(link)"
+     [active]="activeLink == link.name"
+  > 
+     {{link.name}} 
+  </a>
+</nav>
+<mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
 <router-outlet></router-outlet>
