ui home landing page

--- a/mini_project_upn_zetta_team_L/src/app/home/home/home.component.html
+++ b/mini_project_upn_zetta_team_L/src/app/home/home/home.component.html
@@ -1,2 +1,99 @@
-<p>home works!</p>
-<a [routerLink]="['..','login']">ko</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+  
+    <div class="container">
+
+        <div class="header">
+            <mat-toolbar>
+               
+                <span class="example-spacer"></span>
+                <a class="toolbar">Home</a>
+                <a  class="toolbar">Menu</a>
+                <a  class="toolbar">Cart</a>
+                <a  class="toolbar" [routerLink]="['..','login']" >Login</a> 
+              </mat-toolbar>
+    
+              <div class="name">
+               <h1> Welcome To Sushi Resto <br> <br> <br> <br> <br> Enjoy Your Food</h1>
+              </div>
+    
+        </div>
+
+        <div class="box1">
+
+                <img class="cnt1" src="https://cdn-2.tstatic.net/travel/foto/bank/images/ilustrasi-makan-sushi.jpg" alt="">
+               
+       
+            <div class="cnt2">
+                <h1 class="title">
+                    About
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat ad doloremque molestiae soluta quia consectetur perferendis, alias quidem quo incidunt, voluptatibus eum impedit repellat atque molestias voluptatem a reprehenderit vel!
+                   <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora molestias soluta possimus ex vero laudantium dignissimos eaque. Sapiente error, sequi explicabo labore voluptatibus placeat consequatur sint magnam culpa exercitationem ipsa.
+                   <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora molestias soluta possimus ex vero laudantium dignissimos eaque. Sapiente error, sequi explicabo labore voluptatibus placeat consequatur sint magnam culpa exercitationem ipsa.
+                </p>
+               
+            </div>
+            <img class="cnt1" src="https://cdn-2.tstatic.net/travel/foto/bank/images/ilustrasi-makan-sushi.jpg" alt="">
+        </div>
+
+        <div class="menu">
+            <br>
+            <h1 class="titlemenu"> Our Menu</h1>
+            
+            <div class="item">
+               
+                <mat-card class="example-card" *ngFor="let item of items">
+                    <h1 class="resto">Sushi Resto</h1>
+                    <img mat-card-image src= {{item.image}} alt="Sushi.png" class="im">
+                    <mat-card-content>
+                        <h2 id="namamenu">{{item.menu}}</h2>
+                      <p>
+                        {{item.desc}}
+                       </p>
+
+                       <span style="font-weight: bold;">
+                        {{item.harga}}
+                       </span>
+                    </mat-card-content>
+                  </mat-card>
+
+            </div>
+        </div>
+
+        <footer>
+            <div class="footer-content">
+                <h3>Sushi Resto</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, qui tenetur delectus optio quos incidunt neque magnam facilis alias, eligendi est debitis dolorem quis a nesciunt ad quia blanditiis ipsam!</p>
+                <ul class="socials">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <p>copyright &copy; <a href="#">ZettaCamp Team L</a>  </p>
+                        <div class="footer-menu">
+                        
+                        </div>
+            </div>
+    
+        </footer>
+
+    </div>
+
+
+    
+</body>
+</html>
