--- a/mini_project_upn_zetta_team_L/src/app/login/login/login.component.scss
+++ b/mini_project_upn_zetta_team_L/src/app/login/login/login.component.scss
@@ -25,7 +25,7 @@ background-color: aliceblue;
    margin-top: 15px;
   }
   .content{
-    background-color: rgb(177,70,74);
+    background-color: #F0DBDB ;
     height: 1000px;
     display: flex;
    
