--- a/mini_project_upn_zetta_team_L/src/app/home/home/home.component.html
+++ b/mini_project_upn_zetta_team_L/src/app/home/home/home.component.html
@@ -28,8 +28,7 @@
 			<div class="right-card">
 				<div class="slider">
 					<div class="isi-slider">
-						<img [src]="assets/pict1.jpeg">
-						<img [src]="assets/pict2.jpeg">
+						<img src= "https://cdn.grmag.com/wp-content/uploads/sites/113/2020/08/iStock-1053854124-scaled-e1597862441846.jpg" />
 					</div>
 				</div>
 			</div>
