--- a/mini_project_upn_zetta_team_L/src/app/login/login/login.component.html
+++ b/mini_project_upn_zetta_team_L/src/app/login/login/login.component.html
@@ -15,7 +15,7 @@
     <div class="content">       
         <div class="box">
             <mat-card class="example-card" >
-                <button mat-raised-button color="warn" >Back</button>
+                <button  [routerLink]="['','home']" mat-raised-button color="warn" >Back</button>
                 <h1 style="text-align: center; margin-bottom: 10px;" >Login</h1>
                 <mat-card-content class="atas">
                     <form [formGroup]="form"  >
@@ -32,7 +32,7 @@
                             </button>
                         </mat-form-field>
                      
-                     <a [routerLink]="['','home']" >dwdwd</a>
+                     <a >dwdwd</a>
                         <button class="button"mat-raised-button color="primary" (click)="login()">Login</button>
 
                         </form>
